Dynamic Pages with Templating

--- a/web-server/views/about.hbs
+++ b/web-server/views/about.hbs
@@ -3,12 +3,12 @@
 <head>
 
   <link rel="stylesheet" href="./css/styles.css">
-	<title>About</title>
+	<title>{{title}}</title>
 
 </head>
 <body>
 
-  <h2>About Us</h2>
+  <h2>{{header}}</h2>
   <img src="./img/gentleman.jpg">
 
 </body>
