--- a/web-server/views/help.hbs
+++ b/web-server/views/help.hbs
@@ -3,12 +3,13 @@
 <head>
 
   <link rel="stylesheet" href="/css/styles.css">
-	<title>Help</title>
+	<title>{{title}}</title>
 
 </head>
 <body>
 
-  <h2>Help</h2>
+  <h2>{{header}}</h2>
+  <p>{{helpText}}</p>
   
 </body>
 </html>
