--- a/web-server/views/index.hbs
+++ b/web-server/views/index.hbs
@@ -3,13 +3,14 @@
 <head>
 
   <link rel="stylesheet" href="/css/styles.css">
-	<title>Homepage</title>
+	<title>{{title}}</title>
   <script src="/js/app.js"></script>
 
 </head>
 <body>
 
-  <h2>Homepage</h2>
+  <h2>{{header}}</h2>
+  <p>Created by {{creator}}</p>
   
 </body>
 </html>
