--- a/web-server/templates/views/help.hbs
+++ b/web-server/templates/views/help.hbs
@@ -3,13 +3,16 @@
 <head>
 
   <link rel="stylesheet" href="/css/styles.css">
-	<title>{{title}}</title>
+	{{>title}}
 
 </head>
 <body>
 
-  <h2>{{header}}</h2>
+  {{>navbar}}
+  {{>header}}
   <p>{{helpText}}</p>
+  <br>
+  {{>footer}}
   
 </body>
 </html>
