--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -3,14 +3,17 @@
 <head>
 
   <link rel="stylesheet" href="/css/styles.css">
-	<title>{{title}}</title>
+	{{>title}}
   <script src="/js/app.js"></script>
 
 </head>
 <body>
 
-  <h2>{{header}}</h2>
+  {{>navbar}}
+  {{>header}}
   <p>Created by {{creator}}</p>
+  <br>
+  {{>footer}}
   
 </body>
 </html>
