--- a/web-server/templates/partials/navbar.hbs
+++ b/web-server/templates/partials/navbar.hbs
@@ -1,5 +1,39 @@
+<!--
 <div>
-    <a href="/">Homepage</a>
-    <a href="/about">About</a>
-    <a href="/help">Help</a>
+  <a href="/">Homepage</a>
+  <a href="/about">About</a>
+  <a href="/help">Help</a>
 </div>
+-->
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#"><i class="fas fa-cloud-sun-rain"></i> WeatherApp</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="{{mainBtn}}" aria-current="page" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="{{aboutBtn}}" href="/about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/weather">Forecast</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="/help" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Help
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <li><a class="dropdown-item" href="/help/one">Article 1</a></li>
+            <li><a class="dropdown-item" href="/help/two">Article 2</a></li>
+            <li><a class="dropdown-item" href="/help/three">Article 3</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
