--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -3,21 +3,16 @@
 <head>
 
   {{>imports}}
-	{{>title}}
 
 </head>
 <body>
 
   {{>navbar}}
-  <br>
   <div class="container-fluid">
     {{>header}}
-    <br>
-    <img src="./img/gentleman.jpg">
-    <br>
-    <br>
-    {{>footer}}
+    <img class="person" src="/img/gentleman.jpg">
   </div>
+  {{>footer}}
 
 </body>
 </html>
