--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -3,19 +3,17 @@
 <head>
 
   {{>imports}}
-  {{>title}}
 
 </head>
 <body>
 
   {{>navbar}}
-  <br>
   <div class="container-fluid">
     {{>header}}
+    <img id="main-img" src="/img/weather-forecast.jpg">
     <p>Created by {{creator}}</p>
-    <br>
-    {{>footer}}
   </div>
+  {{>footer}}
   
 </body>
 </html>
