Browser HTTP Requests with Fetch

--- a/web-server/templates/partials/navbar.hbs
+++ b/web-server/templates/partials/navbar.hbs
@@ -15,13 +15,10 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="{{mainBtn}}" aria-current="page" href="/">Home</a>
+          <a class="{{mainBtn}}" aria-current="page" href="/">Weather</a>
         </li>
         <li class="nav-item">
           <a class="{{aboutBtn}}" href="/about">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/weather">Forecast</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="/help" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
