Wiring Up the User Interface

--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -25,6 +25,10 @@
       </div>
       <div id="emailHelp" class="form-text">Please provide a valid location to get the weather information.</div>
     </form>
+    <div id="messages">
+      <p id="message-1"></p>
+      <p id="message-2"></p>
+    </div>
   </div>
   {{>footer}}
   
