New Feature Deployment Workflow

--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -10,6 +10,7 @@
   {{>navbar}}
   <div class="container-fluid">
     {{>header}}
+    <p>This site is created by {{creator}} with the help of APIs: Weatherstack.com and Mapbox.com</p>
     <img class="person" src="/img/gentleman.jpg">
   </div>
   {{>footer}}
